<resources>
    <string name="app_name">BLOOD FINDER</string>
    <string name="name">Name</string>
    <string name="loc">Location</string>
    <string name="phone">Phone</string>
    <string name="empty"></string>
    <string name="tr">Treatment</string>
    <string name="namehint">Enter your name</string>
    <string name="phonehint">Enter your phone number</string>
    <string name="select_blood_group">Blood Group</string>
    <string name="Welcome">How did you become Negative??</string>
    <string name="hospitalName">Your hospital name</string>
    <string name="hospital">Please mention you hospital name</string>
    <string name="location">Please Enter your location</string>
    <string name="locationhint">Your current location</string>
    <string name="becomeDonor">Become A Donor</string>
    <string name="register">Register As A Donor</string>
    <string name="request">Register Number</string>
    <string name="pass">Choose password</string>
    <string name="optcode">Enter OTP Code</string>
    <string name="sure">Confirm OTP</string>
    <string name="registerMessage">Get Started As A Donor</string>
    <string name="verificationCode">Enter Verification Code</string>
    <string name="confirm">Confirm Number</string>
    <string name="newReg">Not Registered Yet?</string>
    <string name="newReg2">Create Account</string>
    <string name="newReg3">Enter your password</string>
    <string name="newReg4">Already Have an Account?</string>
    <string name="newReg5">Login</string>
    <string name="keep">Keep Me Logged In</string>
    <string name="treat">Treated In</string>
    <string name="searchBlood">Search For Blood</string>
    <string name="pla_search">Use capital letter for search</string>
    <string name="sr">Enter blood group in capital letter</string>
    <string name="clr">Click Here</string>
    <string name="bdr">Become A Donor</string>
    <string name="t">Call</string>
    <string name="txt">Text</string>
    <string name="wel">Blood Finder</string>
    <string name="log">Welcome To Blood Finder</string>
    <string name="logi">- Search - Find - Donate -</string>
    <string name="nosell2">ask money in return.</string>
    <string name="agree">Accept</string>
    <string name="goback">Go Back</string>
    <string name="notice">** Make sure that above informations are correct and you are only here to help. Asking money in return is strictly prohibited**</string>
    <string name="pro">Provide Your Information</string>
</resources>
